Fix Above the fold spacing

--- a/aboveFold.css
+++ b/aboveFold.css
@@ -26,19 +26,20 @@
     background: #E01171;
     box-shadow: 0 1px 10px 1px rgba(0,0,0,0.15);
     border-radius: 6px;
-    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    position: relative;
     z-index: 1;
     text-align: center;
     max-width: 880px;
     max-height: 382px;
-    padding-top: 50px;
-    padding-bottom: 44px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     padding-left: 52px;
     padding-right: 52px;
+    margin-bottom: 0px;
+    transform: scale(0.8);
+
 }
 
 .kommun{
@@ -305,6 +306,7 @@
     margin-left: 0px;
     margin-right: 0px;
     max-width: 1440px;
+    align-self: flex-end;
 }
 
 .houseIllustrationSS{
@@ -320,11 +322,16 @@
     background-image: url("Clouds.svg");
     background-repeat: no-repeat;
     background-size: 100vw;
-    top: 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dummy{
+    visibility: hidden;
 }
 
 
-@media only screen and (max-width: 1120px){
+@media only screen and (max-width: 639px){
     
     .mainFunctionBox{
         width: 100%;
@@ -344,6 +351,7 @@
         margin-right: auto;
         height: 100%;
         max-height: 700px;
+        transform: none;
     }
 
     .mainFunctionContent{
@@ -473,7 +481,7 @@
     .houseIllustrationSS{
         display: flex;
         width: 100%;
-        margin-top: 8px;
+        margin-top: 50px;
         margin-left: 0px;
         margin-right: 0px;
     }
